fix: API documentation is updated with new user routes
